# funcgeo

./: .gitignore  CHANGELOG.md  README.md  funcgeo.cabal
.stack-work/: stack.sqlite3
.stack-work/install/78aa64e3/lib/x86_64-windows-ghc-9.8.4/funcgeo-0.1.0.0-73nkUphRcTB3SMXqvEODR4/: Geometry.hi
.stack-work/install/78aa64e3/pkgdb/: funcgeo-0.1.0.0-73nkUphRcTB3SMXqvEODR4.conf  package.cache
app/: FractalTree.hs  Main.hs  Spiral.hs
src/: Geometry.hs  Render.hs
