cabal-version:       2.2

name:                funcgeo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/funcgeo#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable funcgeo
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: base >= 4.7 && < 5,
                 funcgeo
  other-modules: FractalTree, Spiral
  default-language: Haskell2010

library
  exposed-modules: Geometry, Render
  hs-source-dirs: src
  build-depends: base >= 4.7 && < 5
  default-language: Haskell2010
